--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "git@github.com:kaminai-legacy/textQuest.git",
   "author": "Olexander Osnova <alex.osnova.work@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "watch": "sass ./src/scss/main.scss ./src/css/style.css -w",
+    "build": "sass ./src/scss/main.scss ./src/css/style.css --style=compressed"
+  },
+  "devDependencies": {
+    "sass": "^1.55.0"
+  }
 }
