--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "scripts": {
     "format": "prettier --write './**/*.{js,scss,html}' --config ./.prettierrc",
     "watch": "sass ./src/scss/main.scss ./src/css/style.css -w",
-    "build": "sass ./src/scss/main.scss ./src/css/style.css --style=compressed",
-    "deploy": "yarn format && yarn build"
+    "build:sass": "sass ./src/scss/main.scss ./src/css/style.css --style=compressed",
+    "build": "pnpm build:sass"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
     "sass": "^1.55.0"
   },
   "engines": {
-    "node": ">=16.0"
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm",
+    "node": ">=16.0",
+    "pnpm": ">=7.0"
   },
   "bugs": {
     "url": "https://github.com/kaminai-legacy/textQuest/issues"
